--- a/dom.html
+++ b/dom.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <script>
+        // let double = n => n*2;
+        // console.log(double(4))
+        // let age = prompt("what is your age", 18);
+
+
+        //     if (age < 18) {
+        //         alert("Hello ");
+
+        //     } else {
+        //         alert("greetings");
+        //     }
+
+        
+
+    </script>
 </body>
+
 </html>
