--- a/add_to_cart_js.html
+++ b/add_to_cart_js.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- cart button -->
     <button onclick="
 console.log( `Cart quantity: ${CartQuantity}`)
         ">Show Quantity </button>
